--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -70,8 +70,9 @@
 
 @media (max-width: 1024px) {
   .container {
-      max-width: 100%; padding: 0 15px;
+      max-width: 100%; padding-left:15px;padding-right:15px;
   }
+ 
 }
 
 
