--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -68,9 +68,9 @@
   }
 }
 
-@media (max-width: 1024px) {
-  .container {
-      max-width: 100%; padding-left:15px;padding-right:15px;
+@media (min-width: 320px) and (max-width: 1024px) {
+ .container {
+    max-width: 100%;  
   }
  
 }
